--- a/html/style-original.css
+++ b/html/style-original.css
@@ -26,7 +26,7 @@
     left: 14%;
     top: -40%;
     overflow: visible !important;
-    /* background-color: rgb(23 23 23 / 80%); */
+    background-color: rgb(23 23 23 / 80%);
     border-radius: .8vh;
     padding: 30px;
 }
@@ -34,10 +34,10 @@
 .character-list-header {
     text-transform: uppercase;
     position: relative;
-    background-color: #0000004d;
-    border-radius: 25px;
+    top: -2vh;
     width: 100%;
-    height: 8vh;
+    height: 10%;
+    right: 0;
 }
 
 .character-list-header>p {
@@ -52,26 +52,22 @@
 
 .character {
     position: relative;
-    /* width: 100%; */
-    /* text-align: center; */
+    width: 100%;
     height: 75px;
     margin-top: 15px;
-    font-weight: bold;
-    font-family: 'Arial', fantasy;
-    background-color: #000000ad;
-    /* border-bottom: 4px solid #000000; */
-    transition: .01s linear;
-    border-radius: 25px;
+    font-family: 'Poppins', sans-serif;
+    border-bottom: 4px solid #74aa3200;
+    transition: .1s linear;
+    border-radius: .3vh;
     cursor: pointer;
 }
 
 .character>span {
-    color: #ffffff;
-    text-align: center;
+    color: #ededed;
     font-weight: 900;
     text-transform: uppercase;
     letter-spacing: .1vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
 }
 
 #cid {
@@ -84,9 +80,7 @@
 }
 
 .char-selected {
-    background-color: #0024fdab;
-    text-align: center;
-    border-radius: 50px;
+    background-color: #dc143c;
 }
 
 .disabled {
@@ -95,12 +89,11 @@
 
 #slot-name {
     position: relative;
-    /* color: #0008ff; */
-    font-weight: bold;
-    /* font-size: 20px; */
+    color: #ededed;
+    font-size: 17px;
     line-height: 80px;
     left: 20px;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
 }
 
 .character-btn {
@@ -128,19 +121,19 @@
 
 #play {
     display: none;
-    background-color: #00ff3a7a;
-    border-radius: 5vh;
+    background-color: #28a745;
+    border-radius: .3vh;
     transition: all 0.2s ease;
 }
 
 #play:hover {
-    background-color: #228a3a;
+    background-color: #00ff3c;
 }
 
 #delete {
     display: none;
-    background-color: #ff000075;
-    border-radius: 5vh;
+    background-color: #dc143c;
+    border-radius: .3vh;
     transition: all 0.2s ease;
 }
 
